# coding-qa-bot

./: .env.example  .gitignore  Dockerfile  README.md  app.py  debug_script.py  docker-compose.yaml  main.py  pyproject.toml
app/config/: settings.py
app/controllers/: rag_controller.py
app/repositories/: vectorstore_repository.py
app/services/: __init__.py  embedding_service.py  pdf_service.py  rag_service.py
app/utils/: __init__.py  model_utils.py  text_utils.py
config/: prompts.py  settings.py
tests/: test_controller_basic.py  test_services.py  test_utils.py  test_vectorstore_repository.py
views/components/: chat_interface.py  main.py  sidebar.py
