[tool.poetry]
name = "coding-qa-bot"
version = "0.1.0"
description = "コーディング規約QAボット"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.32.0"
langchain = "^0.1.0"
langchain-community = "^0.0.24"
langchain-openai = "^0.0.8"
chromadb = "^0.4.24"
pypdf2 = "^3.0.1"
python-dotenv = "^1.0.1"
tiktoken = "^0.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"